<resources>
    <string name="app_name">FirstApp</string>
    <string name="上">↑</string>
    <string name="左上">↖</string>
    <string name="右上">↗</string>
    <string name="下">↓</string>
    <string name="左下">↙</string>
    <string name="右下">↘</string>
    <string name="startText">第一个安卓程序</string>
    <string name="todo">TODO</string>
    <string name="IPText">192.168.137.134</string>
    <string name="PortText">8000</string>
    <string name="连接">连接</string>
</resources>
