<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="75dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address of Raspberry PI"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/IP_Text"
            style="@android:style/Widget.EditText"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:inputType=""
            android:text="@string/IPText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="15dp"
            android:layout_height="34dp"
            android:text=":"
            android:textColor="@color/startbg"
            android:textSize="18sp"
            android:typeface="serif" />

        <EditText
            android:id="@+id/Port_Text"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/PortText" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="81dp"
            android:layout_height="wrap_content"
            android:text="@string/连接" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/btnLUP"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/左上"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/btnUP"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:text="@string/上"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"/>

        <Button
            android:id="@+id/btnRUP"
            android:text="@string/右上"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnLDN"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/左下"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDN"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/下"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRDN"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="5dp"
            android:text="@string/右下"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>


